tests/paczka1/small_fuzzy/67402552.err
Error in line 3: 6wM S493 24,9
Error in line 9: Yt6GuhfRLz A696 299,7
